--- a/AgriMarket.WebAssembly/AgriMarket.WebAssembly.csproj
+++ b/AgriMarket.WebAssembly/AgriMarket.WebAssembly.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\AgriMarket.DTO\AgriMarket.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
